<resources>
    <string name="app_name">ForCastingApp</string>
    <string name="tempUnit"><!--°C-->K</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temperature"> Temperature</string>
    <string name="location"> location</string>
    <string name="windspeed">windspeed</string>
    <string name="Language">Language</string>
    <string name="milesPerHour">milesPerHour</string>
    <string name="meterpersec">meterpersec</string>
    <string name="fahrenheit">fahrenheit</string>
    <string name="celsius">celsius</string>
    <string name="kelvin">milesPerHour</string>
    <string name="arabic">arabic</string>
    <string name="english">english</string>
    <string name="gps">gps</string>
    <string name="map">map</string>
    <string name="Save">Save</string>
    <string name="NextForecast">Next Forecast</string>
    <string name="Delete">Delete</string>
</resources>