<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF325E65"
    tools:context=".setting.view.SettingFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="Language"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <RadioButton
        android:id="@+id/radioArabic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:text="@string/arabic"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <RadioButton
        android:id="@+id/radioEnglish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:text="@string/english"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/radioArabic"
        app:layout_constraintTop_toTopOf="@+id/radioArabic" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="47dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioKelvin" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="47dp"
        android:layout_height="33dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/temperature"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/radioKelvin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/kelvin"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:layout_editor_absoluteX="30dp" />

    <RadioButton
        android:id="@+id/radioCelsius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:text="@string/celsius"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/radioKelvin"
        app:layout_constraintTop_toTopOf="@+id/radioKelvin" />

    <RadioButton
        android:id="@+id/radioFahrenheit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:text="@string/fahrenheit"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/radioCelsius"
        app:layout_constraintTop_toTopOf="@+id/radioKelvin" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="47dp"
        android:layout_height="33dp"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        tools:layout_editor_absoluteY="421dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="144dp"
        android:text="@string/windspeed"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <RadioButton
        android:id="@+id/radioMeterPerSec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/meterpersec"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:layout_editor_absoluteX="30dp" />

    <RadioButton
        android:id="@+id/radioMilesPerHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/milesPerHour"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/radioEnglish"
        app:layout_constraintTop_toTopOf="@+id/radioMeterPerSec" />

</androidx.constraintlayout.widget.ConstraintLayout>